Z-index changes to ensure submenu overlays block overlays (e.g. cover block shading at z-index:1)

--- a/assets/scss/nav.scss
+++ b/assets/scss/nav.scss
@@ -99,7 +99,7 @@
             position: absolute;
             right: -15px;
             max-width: 630px;
-            z-index: 1;
+            z-index: 2;
             padding: 0 15px 0;
             flex-wrap: wrap;
 
@@ -111,7 +111,7 @@
               left:0;
               width: 100%;
               height: 3px;
-              z-index: 3;
+              z-index: 4;
             }
 
             button.hale-header__dropdown-arrow {
@@ -127,7 +127,7 @@
               margin-top:6px;
               
               &:focus-within {
-                z-index: 2;
+                z-index: 3;
               }
 
               a {
